--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,27 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Paises
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  
+ <swiper-container [slidesPerView]="9.5"> 
+   
+  <swiper-slide *ngFor="let pais of respuestapais">
+            <ion-card>
+              <ion-card-header>
+                <ion-img src="{{pais.flags.png}}"></ion-img>
+            <ion-card-title> {{pais.name.common}} </ion-card-title>
+      
+      <ion-label>{{pais.region}}</ion-label>
+      <ion-label>{{pais.area}} Km2</ion-label>
+    </ion-card-header>
+   
+      
+  </ion-card>
+  </swiper-slide>
+  </swiper-container>
 </ion-content>
